# pacman-esearch

./: .gitignore  .travis.yml  CMakeLists.txt  Database.cpp  Database.h  LICENSE  Makefile  README.md  database-global  esearch.kdev4  eupdatedb  eupdatedb.sh  main.cpp  oldstub.c  run-all.sh
.circleci/: config.yml
.github/workflows/: cmake.yml
.kdev4/: esearch.kdev4
include/: database.h  def.h  error.h  esearch.h  misc.h  util.h
src/: CMakeLists.txt  Database.cpp  Database.h  Query.cpp  Query.h  colors.h  database.c  database.h  def.h  error.c  esearch.c  main.c  main.cpp  misc.c  misc.h  util.c  util.h
